Version 1.6 -Tau Ceti-

* [NEW] Users with the right permission can do "minor" edits on wiki pages
  minor edits are not reflected in the history nor are notified by
  email to users "watching" the page.
* [NEW] Forums: Option to allow wiki markup in forum/comment posts.
* [NEW] Forums: the topic description can be disabled when browsing forums.
* [NEW] Checkboxes added in page history to remove many versions of a page.
* [NEW] View page source option from page history for any version. 
* [NEW] Inter wiki links, admin can define URLS in the format 
  http://www.example.com?page=$page or similar ascociating the URL with 
  a name then the syntax ((Wiki:name)) can be used to link to a page 
  in an external wiki. This can be used with other Tiki sites or other
  wikis as well provided that the URL to a page can be constructed putting
  the page name somewhere in a URL.
* [NEW] Wiki pages can be renamed.
* [CHG] Comment and link to diff are now informed when notifying that a page
  has changed
* [NEW] Option to allow users to lock a page and only the user who locked the
  page can unlock it. 
* [NEW] Handlers can be defined to change how wiki pages and other objects 
  are parsed, you can define pre-handlers and pos-handlers. See the file
  tiki-handlers.php
* [NEW] Some tiki objects can be saved in 1-click to the user notepad.
* [NEW] Mini calendar for events by user with daily, weekly and lit view, 
  event topics, find events, etc.
* [NEW] Users can configure if they want to double-click to
  edit wiki pages.
* [NEW] Themes can redefine ANY template of Tiki, just create the template in
  the templates/styles/name directory and Tiki will use that file. If the file
  is not there it will default to the templates directory. (McKenna)
* [NEW] Alternative syntax for tables, you can sepparate rows using line
  returns instead of ||. You have to select which syntax to use in the admin
  screen.
* [NEW] Admin menu submit buttons now get back to the admin section where the